// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/resolve resolvePackageFiles() clears npmrc and yarnrc fields 1`] = `
Array [
  Object {
    "content": Object {
      "name": "something",
      "renovate": Object {
        "automerge": true,
      },
      "version": "1.0.0",
    },
    "currentPackageJsonVersion": "1.0.0",
    "enabled": true,
    "manager": "npm",
    "packageFile": "package.json",
  },
]
`;

exports[`manager/resolve resolvePackageFiles() detect package.json and adds error if cannot parse (onboarding) 1`] = `Array []`;

exports[`manager/resolve resolvePackageFiles() detect package.json and throws error if cannot parse (onboarded) 1`] = `[Error: config-validation]`;

exports[`manager/resolve resolvePackageFiles() detects accompanying files 1`] = `
Array [
  Object {
    "content": Object {
      "name": "package.json",
      "version": "0.0.1",
    },
    "currentPackageJsonVersion": "0.0.1",
    "enabled": true,
    "manager": "npm",
    "npmrc": "npmrc",
    "packageFile": "package.json",
    "packageLock": "package-lock.json",
    "shrinkwrapYaml": "shrinkwrap.yaml",
    "yarnLock": "yarn.lock",
    "yarnrc": "yarnrc",
  },
]
`;

exports[`manager/resolve resolvePackageFiles() detects meteor and docker and travis and bazel and nvm 1`] = `
Array [
  Object {
    "content": "{}",
    "enabled": true,
    "manager": "meteor",
    "packageFile": "package.js",
  },
  Object {
    "branchName": "{{{branchPrefix}}}docker-{{{depNameSanitized}}}-{{{newVersionMajor}}}.x",
    "commitMessage": "Update {{{depName}}} to tag {{{newTag}}}",
    "content": "# comment
FROM node:8
",
    "currentFrom": "node:8",
    "digest": Object {
      "branchName": "{{{branchPrefix}}}docker-{{{depNameSanitized}}}-{{{currentTag}}}",
      "commitMessage": "Update {{{depName}}}:{{{currentTag}}} digest",
      "prBody": "This Pull Request updates Docker base image \`{{{depName}}}:{{{currentTag}}}\` to the latest digest (\`{{{newDigest}}}\`). For details on Renovate's Docker support, please visit https://renovateapp.com/docs/language-support/docker

{{#if schedule}}
**Note**: This PR was created on a configured schedule (\\"{{{schedule}}}\\"{{#if timezone}} in timezone \`{{{timezone}}}\`{{/if}}) and will not receive updates outside those times.
{{/if}}

{{#if hasErrors}}

---

# Errors

Renovate encountered some errors when processing your repository, so you are being notified here even if they do not directly apply to this PR.

{{#each errors as |error|}}
-   \`{{error.depName}}\`: {{error.message}}
{{/each}}
{{/if}}

{{#if hasWarnings}}

---

# Warnings

Please make sure the following warnings are safe to ignore:

{{#each warnings as |warning|}}
-   \`{{warning.depName}}\`: {{warning.message}}
{{/each}}
{{/if}}

---

This PR has been generated by [Renovate Bot](https://renovateapp.com).",
      "prTitle": "Update Dockerfile {{{depName}}} image {{{currentTag}}} digest ({{{newDigestShort}}})",
    },
    "enabled": true,
    "group": Object {
      "prBody": "This Pull Request updates Dockerfiles to use image digests.

{{#if schedule}}
**Note**: This PR was created on a configured schedule (\\"{{{schedule}}}\\"{{#if timezone}} in timezone \`{{{timezone}}}\`{{/if}}) and will not receive updates outside those times.
{{/if}}

{{#each upgrades as |upgrade|}}
-   {{#if repositoryUrl}}[{{upgrade.depName}}]({{upgrade.repositoryUrl}}){{else}}\`{{{depName}}}\`{{/if}}: \`{{upgrade.newDigest}}\`
{{/each}}

{{#if hasErrors}}

---

# Errors

Renovate encountered some errors when processing your repository, so you are being notified here even if they do not directly apply to this PR.

{{#each errors as |error|}}
-   \`{{error.depName}}\`: {{error.message}}
{{/each}}
{{/if}}

{{#if hasWarnings}}

---

# Warnings

Please make sure the following warnings are safe to ignore:

{{#each warnings as |warning|}}
-   \`{{warning.depName}}\`: {{warning.message}}
{{/each}}
{{/if}}

---

This PR has been generated by [Renovate Bot](https://renovateapp.com).",
      "prTitle": "Update Docker {{{groupName}}} digests",
    },
    "major": Object {
      "enabled": false,
    },
    "manager": "docker",
    "packageFile": "Dockerfile",
    "pin": Object {
      "branchName": "{{{branchPrefix}}}docker-pin-{{{depNameSanitized}}}-{{{currentTag}}}",
      "group": Object {
        "prBody": "This Pull Request pins Dockerfiles to use image digests. For details on Renovate's Docker support, please visit https://renovateapp.com/docs/language-support/docker

{{#if schedule}}
**Note**: This PR was created on a configured schedule (\\"{{{schedule}}}\\"{{#if timezone}} in timezone \`{{{timezone}}}\`{{/if}}) and will not receive updates outside those times.
{{/if}}

{{#each upgrades as |upgrade|}}
-   {{#if repositoryUrl}}[{{upgrade.depName}}]({{upgrade.repositoryUrl}}){{else}}\`{{{depName}}}\`{{/if}}: \`{{upgrade.newDigest}}\`
{{/each}}

**Important**: Renovate will wait until you have merged this Pin request before creating PRs for any *upgrades*. If you do not wish to pin anything, please update your config accordingly instead of leaving this PR open.

{{#if hasErrors}}

---

# Errors

Renovate encountered some errors when processing your repository, so you are being notified here even if they do not directly apply to this PR.

{{#each errors as |error|}}
-   \`{{error.depName}}\`: {{error.message}}
{{/each}}
{{/if}}

{{#if hasWarnings}}

---

# Warnings

Please make sure the following warnings are safe to ignore:

{{#each warnings as |warning|}}
-   \`{{warning.depName}}\`: {{warning.message}}
{{/each}}
{{/if}}

---

This PR has been generated by [Renovate Bot](https://renovateapp.com).",
        "prTitle": "Pin Docker digests",
      },
      "groupName": "Pin Docker Digests",
      "prBody": "This Pull Request pins Docker base image \`{{{depName}}}:{{{currentTag}}}\` to use a digest (\`{{{newDigest}}}\`).
This digest will then be kept updated via Pull Requests whenever the image is updated on the Docker registry. For details on Renovate's Docker support, please visit https://renovateapp.com/docs/language-support/docker

{{#if schedule}}
**Note**: This PR was created on a configured schedule (\\"{{{schedule}}}\\"{{#if timezone}} in timezone \`{{{timezone}}}\`{{/if}}) and will not receive updates outside those times.
{{/if}}

**Important**: Renovate will wait until you have merged this Pin request before creating PRs for any *upgrades*. If you do not wish to pin anything, please update your config accordingly instead of leaving this PR open.

{{#if hasErrors}}

---

# Errors

Renovate encountered some errors when processing your repository, so you are being notified here even if they do not directly apply to this PR.

{{#each errors as |error|}}
-   \`{{error.depName}}\`: {{error.message}}
{{/each}}
{{/if}}

{{#if hasWarnings}}

---

# Warnings

Please make sure the following warnings are safe to ignore:

{{#each warnings as |warning|}}
-   \`{{warning.depName}}\`: {{warning.message}}
{{/each}}
{{/if}}

---

This PR has been generated by [Renovate Bot](https://renovateapp.com).",
      "prTitle": "Pin Dockerfile {{{depName}}}:{{{currentTag}}} image digest",
    },
    "prBody": "This Pull Request updates Docker base image \`{{{depName}}}\` from tag \`{{{currentTag}}}\` to new tag \`{{{newTag}}}\`. For details on Renovate's Docker support, please visit https://renovateapp.com/docs/language-support/docker

{{#if schedule}}
**Note**: This PR was created on a configured schedule (\\"{{{schedule}}}\\"{{#if timezone}} in timezone \`{{{timezone}}}\`{{/if}}) and will not receive updates outside those times.
{{/if}}

{{#if hasErrors}}

---

# Errors

Renovate encountered some errors when processing your repository, so you are being notified here even if they do not directly apply to this PR.

{{#each errors as |error|}}
-   \`{{error.depName}}\`: {{error.message}}
{{/each}}
{{/if}}

{{#if hasWarnings}}

---

# Warnings

Please make sure the following warnings are safe to ignore:

{{#each warnings as |warning|}}
-   \`{{warning.depName}}\`: {{warning.message}}
{{/each}}
{{/if}}

---

This PR has been generated by [Renovate Bot](https://renovateapp.com).",
    "prTitle": "Update {{{depName}}} Dockerfile tag to {{#if isMajor}}v{{{newVersionMajor}}}{{else}}v{{{newTag}}}{{/if}}",
  },
  Object {
    "content": "# travis",
    "enabled": false,
    "groupName": "Node.js",
    "lazyGrouping": false,
    "manager": "travis",
    "packageFile": ".travis.yml",
  },
  Object {
    "content": "# WORKSPACE",
    "enabled": true,
    "manager": "bazel",
    "packageFile": "WORKSPACE",
  },
  Object {
    "content": "8.9
",
    "enabled": true,
    "groupName": "Node.js",
    "lazyGrouping": false,
    "manager": "nvm",
    "packageFile": ".nvmrc",
  },
]
`;

exports[`manager/resolve resolvePackageFiles() skips if no content or no match 1`] = `Array []`;

exports[`manager/resolve resolvePackageFiles() strips npmrc with NPM_TOKEN 1`] = `
Array [
  Object {
    "content": Object {
      "name": "package.json",
      "version": "0.0.1",
    },
    "currentPackageJsonVersion": "0.0.1",
    "enabled": true,
    "manager": "npm",
    "packageFile": "package.json",
  },
]
`;

exports[`manager/resolve resolvePackageFiles() uses packageFiles if already configured and raises error if not found 1`] = `Array []`;
